--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "da-DK"
-title                    : 'UniSail'
+title                    : 'Betty af Aalborg'
 title_separator          : "-"
 name                     : "Betty af Aalborg"
 description              : "Hjemmeside for UniSail."
