--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "da-DK"
 title                    : 'Betty af Aalborg'
 title_separator          : "-"
 name                     : "Betty af Aalborg"
-description              : "Hjemmeside for UniSail."
+description              : "Hjemmeside for Kutteren Betty."
 url                      : "https://unisail.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "UniSail/unisail.github.io"
@@ -174,7 +174,7 @@ sass:
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: "Europe/Copenhagen" # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins
