--- a/_config.yml
+++ b/_config.yml
@@ -174,7 +174,7 @@ sass:
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: "Europe/Copenhagen" # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: #"DK" # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins
