--- a/_config.yml
+++ b/_config.yml
@@ -172,9 +172,9 @@ sass:
 
 # Outputting
 permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
+paginate: 5
 paginate_path: /page:num/
-timezone: #"DK" # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Europe/Copenhagen
 
 
 # Plugins
