--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ teaser                   : "/assets/images/betty_under_sejl_500x300.jpg"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
-  provider               : # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
+  provider               : "staticman" # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
   disqus:
     shortname            : # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
@@ -240,6 +240,8 @@ defaults:
     values:
       layout: single
       author_profile: true
+      comments: true
+      
   # _posts
   - scope:
       path: ""
@@ -248,6 +250,6 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments: true
       share: true
       related: true
